2001-08-24  Larry Ewing  <lewing@ximian.com>

	* htmlengine-edit-selection-updater.c: remove the
	html_object_ref/unref calls on the engine.  They are are wrong.
	html_engine_edit_selection_updater_destroy will never get
	called because the ref in html_engine_edit_selection_updater_new
	will keep html_engine_destroy from ever being run.  Thanks go to
	Jacob for tracking this down. Fixes ximian #7168

2001-08-24  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (alloc_font): extract family name from face and
	use that for font lookup

	* htmlfontmanager.c (html_font_manager_get_attr): renamed from
	get_attr, exported

2001-08-23  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (check_last_white): new inlined helper function
	(check_prev_white): ditto
	(is_convert_nbsp_needed): updated, check for
	&nbsp;...&nbsp;<space>
	(write_prev_white_space):  new inlined helper function
	(write_last_white_space): ditto
	(convert_nbsp): updated, convert to &nbsp;...&nbsp;<space>
	(merge_word_width): commented out unused condition

2001-08-22  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cursor.c (html_engine_setup_blinking_cursor):
	start with shown cursor
	(html_engine_setup_blinking_cursor): call blink_timeout_cb
	directly 1st time
	(html_engine_draw_cursor_in_area): draw object cursors only when 

	* htmlengine-edit-clueflowstyle.c (get_props_and_set): when we are
	changing from !item at indent level 0, set insentation to 1 and
	likewise for item --> !item && indentation == 1

	* htmlclueflow.c (html_clueflow_set_style): don't change
	indentation here

2001-08-22  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (check_point): fix some stupidness of mine.

	* htmlclueflow.c (check_point): make sure that head and tail are
	not NULL before we dereference them.  Fixes ximian #5434.

2001-08-21  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (write_pre_tags): add some parens.

	* gtkhtml.c (gtk_html_set_paragraph_alignment): emit alignment